msva-perl (0.8~pre) upstream;

  * minor bugfix release!
  * avoid indirect object creation.
  * bug fix for unused option messages.
  * allow use of hkpms keyservers from gpg.conf
  * allow the use of ports in hostnames (closes MS # 2665)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Sat, 18 Dec 2010 20:51:07 -0500

msva-perl (0.7) upstream;

  * udpated msva-query-agent documentation
  * added gpgkeys_hkpms for monkeysphere-authenticated HKPS access
    (closes MS #2016)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 07 Dec 2010 21:34:23 -0500

msva-perl (0.6) upstream;

  * Add new element to JSON syntax allowing request to override
    keyserver_policy (closes MS #2542)
  * Do not kill off child handling processes on HUP -- let them finish
    their queries.
  * Refactor logging code
  * If we have Gtk2, Linux::Inotify2, and AnyEvent, we should monitor for
    updates and prompt the user when we notice one. (closes MS #2540)
  * Added tests/basic, as a simple test of a few functions (closes MS #2537)
  * fixed double-prompting on sites that have more than one User ID
    (closes MS #2567)
  * report server implementation name and version with every query (closes
    MS #2564)
  * support x509pem, opensshpubkey, and rfc4716 PKC formats in addition to
    x509der (addresses MS #2566)
  * add new peer type categorization (closes MS #2568) -- peers of type
    client can have much more flexible names than regular hostnames we
    look for for servers.

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Sun, 14 Nov 2010 03:04:13 -0500

msva-perl (0.5) upstream;

  * If ${MSVA_KEYSERVER} is unset or blank, default to using keyserver
    from ${GNUPGHOME}/gpg.conf if that file exists. (addresses MS #2080)
  * Under Linux, report details about the requesting process if we can
    learn them from /proc (closes MS #2005)
  * Conditionally rely on Gtk2 perl module -- no marginal UI without it,